fix alignments

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -67,14 +67,23 @@ th {
   background-color: #ffc425;
   color: #0d1f2d;
   padding: 12px 16px;
-  text-align: left;
+  text-align: center;
   font-size: 14px;
+}
+
+th:nth-child(2) {
+  text-align: left;
 }
 
 td {
   padding: 11px 16px;
   font-size: 14px;
   border-bottom: 1px solid #0d1f2d;
+  text-align: center;
+}
+
+td:nth-child(2) {
+  text-align: left;
 }
 
 tr:last-child td { border-bottom: none; }
